# ami-data-companion

./: .dockerignore  .env-example  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  LICENSE  README.md  alembic.ini  app.py  docker-compose.yml  gradio.conf  image_bbox_test.kv  image_bbox_test.py  menu.kv  newrelic.ini  pyproject.toml  requirements.txt  sandbox.ipynb  setup.cfg  setup.py  utils.py
.github/workflows/: lint.yaml  python-app.yml  test-ml.yml  test.yml
api2/: logs.py  schemas.py  service.conf  service.py  taxonomy.py  utils.py
api2/models/: base.py  stages.json
api2/storage/: images.py  s3.py
app/: utils.py
app/screens/: playback.py
assets/: trapdata.desktop
docs/claude/: README.md  api.md  architecture.md  common-tasks.md  database.md  ml-pipeline.md  runbook-mothbot-local-testing.md  testing.md
docs/claude/planning/: antenna-module-refactor.md  pipereg-improvements.md  simplify-worker-tests.md  worker-integration-tests.md
docs/superpowers/plans/: 2026-03-25-feature-vector-extraction.md  2026-04-14-mothbot-detection-pipeline.md
docs/superpowers/specs/: 2026-04-14-mothbot-detection-pipeline-design.md
screens/: menu.kv  menu.py  playback.kv  playback.py
scripts/: job_adc_worker.sh  start_db_container.sh  validate_dwc_export.py
tmp/old/: model_registry.json
tmp/old/classification/: dataloaders.py  moth_nonmoth.py  quebec_vermont_species.py
tmp/old/localization/: dataloaders.py  fasterrcnn_full.py
trapdata/: __init__.py  __main__.py  db.py  localization_classification_batch.py  main.py  menu.kv  menu.py  ml.py  pipeline.py  playback.kv  playback.py  settings.kv  settings.py  summary.kv  summary.py  trapdataanalyzer.ini  types.py  utils.py
trapdata/antenna/: __init__.py  benchmark.py  client.py  datasets.py  registration.py  result_posting.py  schemas.py  service.conf  worker.py
trapdata/antenna/tests/: antenna_api_server.py  test_dataloader_hygiene.py  test_memory_leak.py  test_worker.py
trapdata/api/: __init__.py  ami.service  api.py  auth.py  config.py  datasets.py  demo.py  deployments.py  export_utils.py  factory.py  gunicorn_conf.py  main.py  models.py  pipeline.py  queries.py  queue.py  schemas.py  service.conf  service.py  test_api.py  tests.py  utils.py  web.py
trapdata/api/models/: base.py  classification.py  localization.py
trapdata/api/tests/: antenna_api_server.py  image_server.py  test_api.py  test_features_extraction.py  test_models.py  test_mothbot_pipeline.py  test_ood.py  test_tracking_api.py  test_worker.py  utils.py
trapdata/api/views/: __init__.py  deployments.py  events.py  occurrences.bak2.py  occurrences.py  sessions.py  settings.py  species.py  stats.py  status.py
trapdata/cli/: __init__.py  __main__.py  base.py  collect.py  collector.py  db.py  export.py  queue.py  run.py  scan.py  shell.py  show.py  test.py  tracking.py  worker.py
trapdata/cli/tests/: __init__.py  test_worker_batching.py
trapdata/common/: constants.py  filemanagement.py  files.py  logs.py  s3.py  settings.py  types.py  utils.py
trapdata/common/tests/: test_utils.py
trapdata/config/: model_registry.json
trapdata/db/: __init__.py  base.py  models.py  queries.py  tests.py
trapdata/db/maintenance/: missing_tracking_data.py
trapdata/db/migrations/: README.md  env.py
trapdata/db/migrations/versions/: 1678330000_3665528a445c_init_existing_tables.py  1678332222_90d5f6ae09ec_add_fields_for_tracking.py  1678338134_1544478c3031_missing_data_for_tracking.py  1754607024_68f8b8fe793a_new_column_for_saving_logits_to_.py  90d5f6ae09ec_add_fields_for_tracking.py
trapdata/db/models/: __init__.py  deployments.py  detections.py  events.py  images.py  occurrences.py  queue.py
trapdata/ml/: __init__.py  localization_classification_batch.py  model_registry.json  pipeline.py  server.py  utils.py
trapdata/ml/classification/: dataloaders.py  moth_nonmoth.py  quebec_vermont_species.py  uk_denmark_species.py
trapdata/ml/localization/: README.md  dataloader.py  dataloaders.py  fasterrcnn_full.py  fasterrcnn_mobilenet.py  ssdlite.py
trapdata/ml/localization/fasterrcnn/: __init__.py
trapdata/ml/localization/fasterrcnn_mobilenet/: __init__.py
trapdata/ml/models/: __init__.py  base.py  classification.py  localization.py  tracking.py
trapdata/ml/models/tests/: test_mothbot_yolo.py
trapdata/models/: __init__.py  detections.py  events.py  images.py  queue.py
trapdata/screens/: menu.py
trapdata/tests/: __init__.py  sqldataset.py  test_collate.py  test_exif.py  test_ml_models.py  test_pipeline.py  test_registry.py  test_simple_inference.py  test_tracking.py
trapdata/tests/results/: sequential.json  vermont.json
trapdata/ui/: main.py  menu.kv  menu.py  pipeline.py  playback.kv  playback.py  queue.kv  queue.py  species_summary.kv  species_summary.py  summary.kv  summary.py
trapdata/web/: base.py  gui.py  run.sh  service.py  ui.py
trapdata/web/templates/: base.html  deployments.html  detections.html  home.html  playback.html  surveys.html
