[project]
name = "trapdata"
version = "0.6.0"
description = "Companion software for automated insect monitoring stations"
authors = [{ name = "Michael Bunsen", email = "notbot@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10,<3.13"
urls = { Homepage = "https://github.com/RolnickLab/ami-data-companion", Repository = "https://github.com/RolnickLab/ami-data-companion" }

dependencies = [
    "alembic>=1.10.2",
    "boto3>=1.33",
    "fastapi>=0.100",
    "gradio>=4.41",
    "imagesize>=1.4.1",
    "numpy>=1.26",
    "pandas>=2.0",
    "pillow>=10.0",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "python-dateutil>=2.8.2",
    "python-dotenv>=1.0",
    "requests>=2.28",
    "rich>=13.3",
    "sentry-sdk>=1.18",
    "sqlalchemy>=2.0",
    "sqlalchemy-utils>=0.40",
    "structlog>=22.3",
    "timm>=0.6.13",
    "torch>=2.5",
    "torchvision>=0.20",
    "typer>=0.12.3,<1",
    "uvicorn>=0.20",
]

[project.optional-dependencies]
gui = [
    "kivy[base]>=2.3",
    "plyer>=2.1",
    "pyobjus>=1.2.1; sys_platform == 'darwin'",
]
postgres = [
    "psycopg2-binary>=2.9.5",
]

[dependency-groups]
dev = [
    "black>=23.3",
    "flake8>=6.0",
    "ipython>=8.11",
    "isort>=5.12",
    "mypy-boto3-s3>=1.29",
    "pytest>=7",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
]

[project.scripts]
trapdata = "trapdata.ui.main:run"
trapdata-test = "trapdata.tests.test_pipeline:process_deployments"
ami = "trapdata.cli.base:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["trapdata/tests", "trapdata/**/tests"]

[tool.isort]
profile = "black"
