[metadata]
name = trapdata 
description = Deskop app for viewing and procesing data from autonomous insect monitoring stations.
author = Michael Bunsen 
author_email = notbot@gmail.com
version = 0.3
url = http://github.com/notbot/trapdata
license = MIT


[options]
# install_requires = file: requirements.txt
install_requires = 
    kivy[base]
    plyer
    pyobjus; platform_system == "Darwin"
    Pillow
    python-dateutil
    sqlalchemy>2.0
    sqlalchemy_utils==0.39.0
    timm
    torch==1.13.1
    torchvision==0.14.1
    structlog
    sentry-sdk
    python-dotenv
    pydantic
    typer
    rich
    pandas
zip_safe = False
include_package_data = True
packages = find: 


[options.entry_points]
console_scripts =
    trapdata = trapdata.ui.main:run
    trapdata-test = trapdata.tests:run
    ami = trapdata.cli:cli

[options.package_data]
* = *.kv, *.txt, *.json, *.ini, *.in
